Coding challenge for PAGA GROUP commit4