@@ -6,6 +6,7 @@ import com.nifemi.farmcollector.entity.Planted;
 import com.nifemi.farmcollector.repository.FarmRepository;
 import org.springframework.stereotype.Service;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -24,7 +25,7 @@ public class FarmServiceImpl implements FarmService {
         farm.setName(dto.name());
         farm.setLocation(dto.location());
         Farm savedFarm = farmRepository.save(farm);
-        return new FarmDetailsDTO(savedFarm.getName(), savedFarm.getLocation(), 0, List.of());
+        return new FarmDetailsDTO(savedFarm.getName(), savedFarm.getLocation(), 0, Collections.emptyList());
     }
 
     @Override
@@ -32,12 +33,13 @@ public class FarmServiceImpl implements FarmService {
         Farm farm = farmRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Farm not found with id " + id));
 
-        List<String> cropNames = farm.getPlantings().stream()
+        List<Planted> plantings = farm.getPlantings();
+        List<String> cropNames = (plantings == null) ? Collections.emptyList() : plantings.stream()
                 .map(planted -> planted.getCrop().getName())
                 .distinct()
                 .collect(Collectors.toList());
 
-        int fieldCount = farm.getPlantings().size();
+        int fieldCount = (plantings == null) ? 0 : plantings.size();
 
         return new FarmDetailsDTO(farm.getName(), farm.getLocation(), fieldCount, cropNames);
     }
@@ -46,11 +48,12 @@ public class FarmServiceImpl implements FarmService {
     public List<FarmDetailsDTO> getAllFarms() {
         return farmRepository.findAll().stream()
                 .map(farm -> {
-                    List<String> cropNames = farm.getPlantings().stream()
+                    List<Planted> plantings = farm.getPlantings();
+                    List<String> cropNames = (plantings == null) ? Collections.emptyList() : plantings.stream()
                             .map(planted -> planted.getCrop().getName())
                             .distinct()
                             .collect(Collectors.toList());
-                    int fieldCount = farm.getPlantings().size();
+                    int fieldCount = (plantings == null) ? 0 : plantings.size();
                     return new FarmDetailsDTO(farm.getName(), farm.getLocation(), fieldCount, cropNames);
                 })
                 .collect(Collectors.toList());
@@ -65,11 +68,12 @@ public class FarmServiceImpl implements FarmService {
         farm.setLocation(dto.location());
         Farm updatedFarm = farmRepository.save(farm);
 
-        List<String> cropNames = updatedFarm.getPlantings().stream()
+        List<Planted> plantings = updatedFarm.getPlantings();
+        List<String> cropNames = (plantings == null) ? Collections.emptyList() : plantings.stream()
                 .map(planted -> planted.getCrop().getName())
                 .distinct()
                 .collect(Collectors.toList());
-        int fieldCount = updatedFarm.getPlantings().size();
+        int fieldCount = (plantings == null) ? 0 : plantings.size();
 
         return new FarmDetailsDTO(updatedFarm.getName(), updatedFarm.getLocation(), fieldCount, cropNames);
     }
